--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestExecutor.Core\TestExecutor.Core.csproj" />
+  </ItemGroup>
+
 </Project>
