--- a/TestExecutor.Application/TestExecutor.Application.csproj
+++ b/TestExecutor.Application/TestExecutor.Application.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\TestExecutor.Core\TestExecutor.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.67.0" />
+  </ItemGroup>
+
 </Project>
